--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -70,6 +70,6 @@ jobs:
      - uses: actions/checkout@v2
      - uses: akhileshns/heroku-deploy@v3.0.4 # This is the action
        with:
-         heroku_api_key: ${{"d1195b82-1eec-401b-8dec-e3463a737725"}}
-         heroku_app_name: garcia-marcio # Must be unique in Heroku
-         heroku_email: ${{"garcia.marcio.br@gmail.com"}}
+         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+         heroku_app_name: "garcia-marcio" # Must be unique in Heroku
+         heroku_email: ${{secrets.HEROKU_EMAIL}}
